<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:id="@+id/screen"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="4"
            android:gravity="center|end"
            android:textSize="54sp"
            android:paddingEnd="20dp"
            />
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="6"
            >

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="3"
                android:baselineAligned="false"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="10dp">

                <Button
                    style="@style/Widget.AppCompat.Button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:onClick="printBtnNumber"
                    android:text="@string/btn_7" />

                <Button
                    style="@style/Widget.AppCompat.Button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:onClick="printBtnNumber"
                    android:text="@string/btn_8" />

                <Button
                    style="@style/Widget.AppCompat.Button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:onClick="printBtnNumber"
                    android:text="@string/btn_9" />

                <Button
                    style="@style/Widget.AppCompat.Button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:onClick="printBtnNumber"
                    android:text="@string/btn_divide" />
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="3"
                android:baselineAligned="false"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="10dp">

                <Button
                    style="@style/Widget.AppCompat.Button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:onClick="printBtnNumber"
                    android:text="@string/btn_4" />

                <Button
                    style="@style/Widget.AppCompat.Button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:onClick="printBtnNumber"
                    android:text="@string/btn_5" />

                <Button
                    style="@style/Widget.AppCompat.Button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:onClick="printBtnNumber"
                    android:text="@string/btn_6" />

                <Button
                    style="@style/Widget.AppCompat.Button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:onClick="printBtnNumber"
                    android:text="@string/btn_multiple" />
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="3"
                android:baselineAligned="false"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="10dp">

                <Button
                    style="@style/Widget.AppCompat.Button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:onClick="printBtnNumber"
                    android:text="@string/btn_1" />

                <Button
                    style="@style/Widget.AppCompat.Button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:onClick="printBtnNumber"
                    android:text="@string/btn_2" />

                <Button
                    style="@style/Widget.AppCompat.Button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:onClick="printBtnNumber"
                    android:text="@string/btn_3" />

                <Button
                    style="@style/Widget.AppCompat.Button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:onClick="printBtnNumber"
                    android:text="@string/btn_add" />
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="3"
                android:baselineAligned="false"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="10dp">

                <Button
                    style="@style/Widget.AppCompat.Button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:onClick="printBtnNumber"
                    android:text="@string/btn_0" />

                <Button
                    style="@style/Widget.AppCompat.Button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:onClick="printBtnNumber"
                    android:text="@string/btn_ce" />

                <Button
                    style="@style/Widget.AppCompat.Button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:onClick="countExpression"
                    android:text="@string/btn_eq" />

                <Button
                    style="@style/Widget.AppCompat.Button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:onClick="printBtnNumber"
                    android:text="@string/btn_subtract" />
            </TableRow>
        </TableLayout>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>